[package]
name = "rust-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
hyper = { version = "0.14.26", features = ["full"] }
tokio = { version = "1.28.0", features = ["full"] }
tower = "0.4.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.4.0", features = ["fs"] }
tower-cookies = "0.9.0"

[dev-dependencies]
anyhow = { version = "1.0", default-features = false }
httpc-test = "0.1.1"
